--- a/13 - Elk Stack Project - Github Fundamentals/Playbooks/install-elk.yml
+++ b/13 - Elk Stack Project - Github Fundamentals/Playbooks/install-elk.yml
@@ -3,11 +3,11 @@
   hosts: elk
   become: true
   tasks:
-    # Use command module
+    
     - name: Increase virtual memory
       command: sysctl -w vm.max_map_count=262144
 
-    # Use sysctl module
+    
     - name: Use more memory
       sysctl:
         name: vm.max_map_count
@@ -15,14 +15,14 @@
         state: present
         reload: yes
 
-    # Use docker_container module
-    - name: download and launch a docker elk container
+   
+    - name: Elk container
       docker_container:
         name: elk
         image: sebp/elk:761
         state: started
         restart_policy: always
-        # Please list the ports that ELK runs on
+        # Ports that ELK runs on
         published_ports:
           -  5601:5601
           -  9200:9200
